# UnixSharedLib

./: README.md
auto-load/: CMakeLists.txt  README.md  build.sh  main.cpp  mylib.cpp
auto-load/MyExecutable/: CMakeLists.txt  Main.cpp
auto-load/MySharedLib/: CMakeLists.txt  MySharedLib.cpp
auto-load/MyStaticLib/: CMakeLists.txt  MyStaticLib.cpp
auto-load/old/: build.sh  main.cpp
bundle-libstdc++/: ModernStuff.cpp  README.md  build_app.sh  build_lib.sh  main.cpp
embed-file/: .gitignore  CMakeLists.txt  FileMap.hpp  LibMetadata.hpp  LogRedirect.hpp  README.md  build.sh  settings.gradle
embed-file/MyDynFramework/: CMakeLists.txt
embed-file/MyExecutable/: CMakeLists.txt  Main.cpp  MyExecutableConfig.cmake
embed-file/MySharedLib/: CMakeLists.txt  Info.plist  MySharedLib.cpp  MySharedLib.hpp  build.sh
embed-file/ParseELF/: CMakeLists.txt  ParseElf.cpp  ParseElf.hpp  README.md
embed-file/ParseMach/: CMakeLists.txt  ParseMach.cpp  ParseMach.hpp
embed-file/embed-emulate/: build.sh  main.cpp
embed-file/incbin/: README.md
embed-file/linux/: ElfUtils.hpp  ParseElf.cpp  README.md  build.sh  embed_example.txt  main.cpp  mylib.cpp  parse_elf.cpp
embed-file/linux-embed-file/: ElfUtils.hpp  README.md  build.sh  main.cpp  mylib.cpp  mylib.map  parse_elf.cpp
embed-file/mac/: CMakeLists.txt  README.md  build.sh
embed-file/mac-embed-file/: ParseMach  README.md  build.sh  main.cpp  mylib.cpp  mystaticlib.cpp  parse_mach.cpp  parse_macho.cpp
embed-file/mac-framework/: CMakeLists.txt  build.sh  yDynFramework.cpp
embed-file/mac-framework/MyDynFramework/: CMakeLists.txt  MyDynFramework.cpp  build.sh  embed_example.txt
embed-file/mac-framework/MyExecutable/: CMakeLists.txt  Main.cpp  build.sh
embed-file/mac-framework/ParseMach/: CMakeLists.txt  ParseMach.cpp
embed-file/mac/MyDynFramework/: CMakeLists.txt  Info.plist  MyDynFramework.cpp  build.sh
embed-file/mac/MyExecutable/: CMakeLists.txt
embed-file/mac/ParseELF/: ParseElf.cpp  build.sh
embed-file/mac/ParseMach/: ParseMach.cpp
force-load/: .gitignore  CMakeLists.txt  README.md  build.sh  build_wasm.bat
force-load/IndependentTest/: CMakeLists.txt
force-load/MyExecutable/: CMakeLists.txt  Main.cpp
force-load/MySharedLib/: CMakeLists.txt  MySharedLib.cpp  MySharedLib.hpp
force-load/MyStaticLib/: CMakeLists.txt  MyStaticLib.cpp  MyStaticLib.hpp  MyStaticLibConfig.cmake
force-load/StaticLibWrap/: CMakeLists.txt  StaticLibWrap.cpp
images/: Fedora-43.bat  RedHat-8.8.bat  RedHat-8.Dockerfile  RedHat-8.bat  Ubuntu-18.04-gcc-13.bat  Ubuntu-18.04.bat  Ubuntu-24.04.bat
mobile-dlopen/: AndroidManifest.xml  CMakeLists.txt  Info.plist.in  LibMetadata.hpp  LogRedirect.hpp  PRIVACY.md  README.md  build.gradle  build.sh
mobile-dlopen/MobileDlopen/: CMakeLists.txt  Main.cpp  build.sh  iOSApp.mm  iOSApp.swift
mobile-dlopen/MyExecutable/: CMakeLists.txt  build.sh
mobile-dlopen/MySharedLib/: CMakeLists.txt  MySharedLib.cpp  MySharedLib.hpp  MySharedLibConfig.cmake
mobile-dlopen/ParseELF/: CMakeLists.txt  Main.cpp  ParseElf.cpp  ParseElf.hpp  README.md
mobile-dlopen/ParseMach/: CMakeLists.txt  Main.cpp  ParseMach.cpp  ParseMach.hpp
static-lib-embed/: CMakeLists.txt  README.md  build.sh
static-lib-embed/IndependentTest/: CMakeLists.txt
static-lib-embed/InnerStaticLib/: CMakeLists.txt  InnerStaticLib.cpp  InnerStaticLib.hpp  InnerStaticLibConfig.cmake
static-lib-embed/MyExecutable/: CMakeLists.txt  Main.cpp
static-lib-embed/MyStaticLib/: CMakeLists.txt  MyStaticLib.cpp  MyStaticLib.hpp
static-lib-embed/StaticLibEmbed/: CMakeLists.txt  StaticLibEmbed.cpp  StaticLibEmbed.hpp  StaticLibWrap.cpp  StaticLibWrap.hpp  StaticLibWrapConfig.cmake
static-lib-embed/StaticLibWrap/: CMakeLists.txt  StaticLibWrap.cpp  StaticLibWrapConfig.cmake
static-libstdc++/: README.md
wip/android-sample/: AndroidManifest.xml  CMakeLists.txt  MySharedLib.cpp  MySharedLib.hpp  build.gradle  build.sh  main.cpp  settings.gradle
wip/android-sample/src/: AndroidManifest.xml
wip/android-sample/src/main/: AndroidManifest.xml
wip/android-sample/src/main/cpp/: CMakeLists.txt  main.cpp
